css/style.css
* {
padding: 0px;
margin: 0px;
}

.cf:before, .cf:after {
	content: "";
	display: table;
}

.cf:after {
	clear: both;
}

.cf {
	zoom: 1;
}

#graph-container {
	top: 0;
	bottom: 0;
	left: 0;
	right: 0;
	position: absolute;
	background-color: #eee;
}

html,body {
	width: 100%;
	height: 100%;
	margin: 0px;
	padding: 0px;
	font-size: 12px;
	font-family: sans-serif;
	line-height:1.25em;
}

#maintitle {
width: 100%;
height: 72px;
background-repeat: no-repeat;
margin-bottom:20px;
}

#maintitle h1 {
display: none;
}

#mainpanel {
margin-top: 50px;
margin-left: 25px;
background:#fff;
background-color:rgba(255,255,255,0.8);
border:1px solid #ccc;
z-index:20;
position:fixed;
top:0;
}

#mainpanel .b1 {
padding: 0px 0 0 0;
}

#mainpanel .col {
width: 240px;
padding: 18px 18px 18px 18px;
margin: 0;

}

#title {
font-weight: bold;
}

#titletext {
padding: 6px 0 10px 0;
}

#info {
	padding-bottom:15px;
}


#search {
	border-top: 1px solid #999;
	padding: 20px 0 0px 2px;
}

#search input[name=search] {
border: 1px solid #999;
background-color: #fff;
padding: 5px 7px 4px 7px;
width: 205px;
color: #000;
}

#search input.empty {
color: #000;
}

#search .state {
width: 14px;
height: 14px;
background-image: url('../images/sprite.png');
float: right;
margin-top: 6px;
cursor: pointer;
background-position: -131px -13px;
}

#search .state.searching {
background-position: -11px -13px;
}

#search .results {
	display: none;
/*	border: 1px solid #999;*/
	margin: 6px;
	/*height: 150px;*/
	overflow-y: scroll;
	overflow-x: hidden;
}

#search .results b {
padding-left: 2px;
}

#search .results a {
padding: 1px 2px;
display: block;
cursor: pointer;
text-decoration: none;
color: #000;
}

#search .results a:hover {
background-color: #999;
color: #fff;
}

#mainpanel dl {
	padding-bottom:10px;
}

#mainpanel h2 {
	font-size:14px;
}

#mainpanel dt {
width: 20px;
height: 20px;
float: left;
background-repeat: no-repeat;
background-image: url('../images/sprite.png');
}

#legend dl {
}

#mainpanel h2 {
	padding-bottom:10px;
}

#legend dd {
margin-bottom: 8px;
color: #000;
}

#mainpanel .infos dd {
margin-bottom: 12px;
}

#mainpanel .node {
background-position: -11px -119px;
}

#mainpanel .edge {
background-position: -51px -122px;
}

#mainpanel .colours {

background-image:url('../images/rainbow.png');

}
#legend .note {
margin-bottom: 8px;

}

#mainpanel .regions {
background-position: -171px -13px;
}

#mainpanel .download {
background-position: -51px -13px;
}

#mainpanel .moreinformation {
background: url('../images/info.png');
background-repeat: no-repeat;
margin-left: 5px;
}

#information {
	display: none;
    background: #bebebe;
    border: 1px solid #000;
    
    /* Center with known width/height */
    box-sizing: border-box; /* So we don't have to think about border/padding */
    width: 280px;
    height: 160px; /* You don't have to set the height - but it won't be 100% centered vertically */
    position: absolute;
    left: 50%;
    top: 50%;
    margin: -50px 0 0 -140px; /* 50px = half of height, 140px = half of width */
    
    /* Center without knowing the width/height */
    width: auto;
    height: auto;
    margin: 0;
    transform: translateX(-50%) translateY(-50%); 
}

#information .text {
	padding: 20px;
	padding-top: 10px;
	border-top: 1px solid #999;
}

#information .closeButton {
	background-image: url('../images/fancybox_sprite.png');
	margin-left:-20px !important; 
	z-index:99999;
	cursor: pointer;
	line-height:36px;
	background-repeat: no-repeat;
	font-weight: bold;
	font-size:14px;
	padding-left:41px;
	margin-bottom:0;
}

/*Group selector*/
#attributeselect {
margin: 20px 0 13px 0 ;
-webkit-touch-callout: none;
-webkit-user-select: none;
-khtml-user-select: none;
-moz-user-select: none;
-ms-user-select: none;
user-select: none;
}

#attributeselect .select {
	border: 1px solid #999;
	padding: 5px 7px 4px 7px;
	color: #fff;
	cursor: pointer;
	background-color: #999;
	background-image: url('../images/sprite.png');
	background-repeat: no-repeat;
	background-position: 200px -144px;
}

#attributeselect .close {
	background-position: 200px -8px;
}

#attributeselect .list {
	display: none;
	border: 1px solid 
	#999;
	padding: 6px;
	height: 150px;
	width: 226px;
	overflow-y: scroll;
	overflow-x: hidden;
	background-color: #999;
	/*position: relative;
		left: 240px;
		bottom: 164px;*/
	position:absolute;
	margin-left: 240px;
	margin-top:-164px;
	color: white;
}	

#attributeselect .list a {
display:block;
padding: 2px;
text-decoration: none;
color: #fff;
}

#attributeselect .list a:hover {
background-color: #fff;
color: #000;
}
/*end group selector*/


/*Right side attributepane*/
#attributepane {
	display: none;
    position:absolute;
    height:auto;
    bottom:0;
    top:0;
    right:0;
	width: 240px;
	background-color: #fff;
	margin: 0;
	word-wrap: break-word;
	background-color:rgba(255,255,255,0.8);
	border-left: 1px solid #ccc;
	padding: 0px 18px 10px 18px;	
	z-index: 1;
}


#attributepane .text {
	height:100%;
	overflow-y: scroll;
}

#attributepane .headertext {
	color: #000;
	margin-bottom: 5px;
	height: 14px;
	/*border-bottom: 1px solid #999;*/
	padding: 10px 0 10px 0; /*t r b l*/
	font-size:16px;
	font-weight:bold;
}

#attributepane h2 {
	color: #000;
	margin-bottom: 5px;
	/*height: 14px;*/
	border-bottom: 1px solid #999;
	padding: 10px 0 10px 0; /*t r b l*/
	font-size:14px;
	font-weight:bold;
}

#attributepane dl {
  width: 100%;
  overflow: hidden;
  padding: 0;
  margin: 0
}
#attributepane dt {
  float: left;
  width: 50%;
  padding: 0;
  margin: 0;
  clear: left;
}
#attributepane dd {
  float: left;
  width: 50%;
  padding: 0;
  margin: 0;
}

#attributepane dd:nth-of-type(even), #attributepane dt:nth-of-type(even) { 
	background-color:#ccc;
}​

#attributepane .left-close {
	background-image: url('../images/fancybox_sprite.png');
	margin-left:-37px !important; 
	z-index:99999;
	cursor: pointer;
	padding-left:31px;
	line-height:36px;
	background-repeat: no-repeat;
	margin-bottom:25px;
	font-weight: bold;
	font-size:14px;
}

#attributepane .returntext span {
	padding-left: 5px;
	display: block;
}

/*end right side attributepane*/


/*Copyright*/

#copyright {
	margin:0 auto;	
	position: fixed;
	right: 40px;
	bottom: 25px;
	z-index:0;
}

#copyright a {
color: #000;
}

#copyright .explanation {
display: none;
}

/*end copyright*/

/*Zoom*/

#zoom {
	z-index:999;
	position: fixed;
	left: 10%;
	bottom: 25px;
	margin:0 auto;
	padding: 0;
	-webkit-touch-callout: none;
	-webkit-user-select: none;
	-khtml-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
	text-align:left;
}

#zoom .z {
	background:#fff;
	background-color:rgba(255,255,255,0.7);
	width: 60px;
	height: 60px;
	cursor: pointer;
	border:1px solid #ccc;
	float:left;
	margin-right:4px;
	background-repeat:no-repeat;
}

#zoom .z[rel=center] {
	background-image: url('../images/zoom_reset.png');
	background-position:center;
}

#zoom .z[rel=in] {
	background-image: url('../images/zoom_in.png');
	background-position:center; 
}

#zoom .z[rel=out] {
	background-image: url('../images/zoom_out.png');
	background-position:center; 
}

/*end zoom*/

